# rust_todo

./: .gitignore  Cargo.toml
src/: main.rs
src/adapters/: mod.rs
src/cli/: mod.rs
src/domain/: mod.rs
src/handlers/: mod.rs
