[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
uuid = { version = "1.4.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]}
